<resources>
    <string name="app_name">Prayers</string>
    <string name="add_prayer">Add Prayer</string>
    <string name="edit_prayer">Edit Prayer</string>
    <string name="title_hint">Title</string>
    <string name="content_hint">Content</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="confirm_delete">Are you sure you want to delete this prayer?</string>
    <string name="untitled">Untitled</string>
    <string name="error_empty_content">Content cannot be empty</string>
    <string name="tab_catholic">Catholic</string>
    <string name="tab_umbanda">Umbanda</string>
    <string name="add_category">Add Category</string>
    <string name="category_name_hint">Category Name</string>
    <string name="rename_category">Rename Category</string>
    <string name="choose_category">Choose Category</string>
    <string name="new_category">New Category (Optional)</string>
    <string name="move_to">Move to...</string>
    <string name="delete_category_confirm">Delete this category and all its prayers?</string>
    <string name="no_categories_instructions">Welcome! Please click the + icon in the toolbar to create your first prayer panel (e.g., Religion name).</string>
    <string name="stoic_title">Daily Stoic</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="already_read">Read</string>
</resources>
